--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,7 @@
 name: run main.py
 
 on:
+  workflow_dispatch: # Enables manual triggering
   schedule:
     - cron: 0 */5 * * * # Everyday at 00:00, 05:00, 10:00, 15:00, and 20:00
 
